docs/core/v0.3/_sources/reference/tmlt/core/utils/distributions/index.rst.txt



********************
distributions
********************

.. py:module:: tmlt.core.utils.distributions

.. autoapi-nested-parse::

   Probability functions for distributions commonly used in differential privacy.











Functions
=========

.. list-table::

   * - :func:`.double_sided_geometric_pmf`
     - Returns the pmf for a double sided geometric distribution at k.
   * - :func:`.double_sided_geometric_cmf`
     - Returns the cmf for a double sided geometric distribution at k.
   * - :func:`.discrete_gaussian_pmf`
     - Returns the pmf for a discrete gaussian distribution at k.
   * - :func:`.discrete_gaussian_cmf`
     - Returns the cmf for a discrete gaussian distribution at k.

.. py:function:: double_sided_geometric_pmf(k: int, alpha: float) -> float
              double_sided_geometric_pmf(k: numpy.ndarray, alpha: float) -> numpy.ndarray

   Returns the pmf for a double sided geometric distribution at k.

   For :math:`k \in \mathbb{Z}`

   .. math::

       f(k)=
       \frac
           {e^{1 / \alpha} - 1}
           {e^{1 / \alpha} + 1}
       \cdot
       e^{\frac{-\mid k \mid}{\alpha}}

   A double sided geometric distribution is the difference between two geometric
   distributions (It can be sampled by sampling two values from a geometric
   distribution, and taking their difference).

   See section 4.1 in :cite:`BalcerV18` or scipy.stats.geom for more information (Note
   that the parameter :math:`p` used in scipy.stats.geom is related to :math:`\alpha`
   through :math:`p = 1 - e^{-1 / \alpha}`).

   :param k: The values to calculate the pmf for.
   :param alpha: The scale of the geometric distribution.



.. py:function:: double_sided_geometric_cmf(k: int, alpha: float) -> float
              double_sided_geometric_cmf(k: numpy.ndarray, alpha: float) -> numpy.ndarray

   Returns the cmf for a double sided geometric distribution at k.

   For :math:`k \in \mathbb{Z}`

   .. math::

       F(k) = \begin{cases}
       \frac{e^{1 / \alpha}}{e^{1 / \alpha} + 1} \cdot e^\frac{k}{\alpha} &
       \text{if k} \le 0 \\
       1 - \frac{1}{e^{1 / \alpha} + 1}\cdot e^{\frac{-k}{\alpha}} &
       \text{otherwise} \\
       \end{cases}

   See :func:`double_sided_geometric_pmf` for more information.

   :param k: The values to calculate the pmf for.
   :param alpha: The scale of the geometric distribution.



.. py:function:: discrete_gaussian_pmf(k: int, sigma_squared: float) -> float
              discrete_gaussian_pmf(k: numpy.ndarray, sigma_squared: float) -> numpy.ndarray

   Returns the pmf for a discrete gaussian distribution at k.

   For :math:`k \in \mathbb{Z}`

   .. math::
       :label: discrete_gaussian_pmf

       f(k) = \frac
       {e^{k^2/2\sigma^2}}
       {
           \sum_{n\in \mathbb{Z}}
           e^{n^2/2\sigma^2}
       }

   See :cite:`Canonne0S20` for more information. The formula above is based on
   Definition 1.

   The implementation also referenced the paper's implementation, which can be found at
   https://github.com/IBM/discrete-gaussian-differential-privacy.



.. py:function:: discrete_gaussian_cmf(k: int, sigma_squared: float) -> float
              discrete_gaussian_cmf(k: numpy.ndarray, sigma_squared: float) -> numpy.ndarray

   Returns the cmf for a discrete gaussian distribution at k.

   See :eq:`discrete_gaussian_pmf` for the probability mass function.







